@@ -16,7 +16,8 @@
 %\author{CCP4 Workshop Bangalore}
 %\author{CCP4 Workshop}
 %\author{CSHL 2006 Workshop}
-\author{Osaka 2006 Workshop}
+%\author{Osaka 2006 Workshop}
+\author{EMBO 2007 Workshop}
 
 \begin{document}
 \maketitle
@@ -840,10 +841,10 @@ coordinates and try it if you like (the Baton Building window can be
 found by clicking \textsf{``Ca Baton Mode\ldots''} in the Other
 Modelling Tools dialog\footnote{this is quite advanced)}.
   
-  If you want to do this, I suggest you use Go To Atom and start
-  residue 2 A (this allows you to build the complete A chain in the
-  correct direction (it takes about 15 minutes) and you can compare it
-  to the real structure afterwards.
+If you want to do this, I suggest you use Go To Atom and start residue
+2 A (this allows you to build the complete A chain in the correct
+direction (it takes about 15 minutes or so) and you can compare it to
+the real structure afterwards.
   
   Remember, when you start, you are placing a CA at the baton
   \textbf{tip} and at the start you are placing atom CA 1.  This might
